plugins {
    id 'java'
    id 'checkstyle'
    id 'com.github.spotbugs' version '6.0.7'
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

dependencies {
    implementation 'com.amazonaws:aws-lambda-java-core:1.2.3'
    implementation 'software.amazon.awssdk:s3:2.28.29'
    implementation 'software.amazon.awssdk:dynamodb:2.28.29'
    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.28.29'
    implementation 'com.amazonaws:aws-lambda-java-log4j2:1.6.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
    implementation 'org.json:json:20230227'
    implementation 'software.amazon.awssdk:ssm:2.28.29'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'software.amazon.awssdk:sns:2.28.29'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-inline:4.6.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

configurations {
    testImplementation.extendsFrom compileOnly
}

test {
    useJUnitPlatform()
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    
    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
    ignoreFailures = false
}

checkstyle {
    toolVersion = '10.12.5'
    ignoreFailures = false
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

spotbugs {
    effort = 'max'
    reportLevel = 'low'
    ignoreFailures = false
    excludeFilter = file('/config/spotbugs/spotbugs-exclude.xml')
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
    reports {
        html.required = true
        xml.required = false
    }
}

task buildZip(type: Zip) {
    from compileJava
    from processResources
    into('lib') {
        from configurations.runtimeClasspath
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

build.dependsOn buildZip